[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
authors = ["Pravin Mishra pravin@gmail.com"]
description = "A key-value store"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.32.0"
structopt = "0.2.15"
failure = "0.1.8"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.0.7"
log = "0.4.19"
stderrlog = "0.5.4"
sled = "0.34.7"



[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.3"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"

[[bench]]
name = "benches"
harness = false

